--- a/lab/Lab3_Demo.Rmd
+++ b/lab/Lab3_Demo.Rmd
@@ -24,71 +24,52 @@ dat <- AmesHousing::make_ames()
 ```{r intial_split}
 # Data splitting with {rsample} 
 set.seed(123) #set a seed for reproducibility
-split <- initial_split(dat)
-split
-ames_train <-  training(split)
-ames_test  <- testing(split)
+split <- 
+
+ames_train <-  
+ames_test  <- 
 
 ```
 
 ```{r model_data}
 #Create training feature matrices using model.matrix() (auto encoding of categorical variables)
 
-X <- model.matrix(Sale_Price ~ ., data = ames_train)[, -1]
+X <- 
 
 # transform y with log() transformation
-Y <- log(ames_train$Sale_Price)
+Y <- 
 
-# run skim(data = dat) in console
 ```
 
 ```{r glmnet}
 #fit a ridge model, passing X,Y,alpha to glmnet()
-ridge <- glmnet(
-  x = X,
-  y = Y,
-  alpha = 0
-)
+ridge <- 
 
 #plot() the glmnet model object
-plot(ridge, xvar = "lambda")  
+
+plot()  
 ```
 
 ```{r}
 # lambdas applied to penalty parameter.  Examine the first few
-ridge$lambda %>% head()
+
+
+
+# small lambda results in large coefficients
+
+# what about for small coefficients?
+
   
 ```
-
-```{r}
-# small lambda results in large coefficients
-coef(ridge)[c("Latitude", "Overall_QualVery_Excellent"), 100]
-```
-
-```{r}
-# what about for small coefficients?
-coef(ridge)[c("Latitude", "Overall_QualVery_Excellent"), 1]
-
-```
-
-
 How much improvement to our loss function as lambda changes?
 
 ##Tuning
 ```{r cv.glmnet}
 # Apply CV ridge regression to Ames data.  Same arguments as before to glmnet()
-ridge <- cv.glmnet(
-  x = X,
-  y = Y,
-  alpha = 0
-)
+ridge <- 
 
 # Apply CV lasso regression to Ames data
-lasso <- cv.glmnet(
-  x = X,
-  y = Y,
-  alpha = 1
-)
+lasso <- 
   
 # plot results
 par(mfrow = c(1, 2))
@@ -96,7 +77,7 @@ plot(ridge, main = "Ridge penalty\n\n")
 plot(lasso, main = "Lasso penalty\n\n")
 ```
 
-10-fold CV MSE for a ridge and lasso model. What's the "rule of 1 standard error"?
+10-fold CV MSE for a ridge and lasso model. What's the "rule of 1 standard deviation"?
 
 In both models we see a slight improvement in the MSE as our penalty log(λ) gets larger, suggesting that a regular OLS model likely overfits the training data. But as we constrain it further (i.e., continue to increase the penalty), our MSE starts to increase. 
 
@@ -104,65 +85,33 @@ Let's examine the important parameter values apparent in the plots.
 ```{r}
 # Ridge model
 # minimum MSE
-min(ridge$cvm)
 
 # lambda for this min MSE
-ridge$lambda.min
-```
 
-```{r}
-# Ridge model
 # 1-SE rule
-ridge$cvm[ridge$lambda == ridge$lambda.1se]
 
 # lambda for this MSE
-ridge$lambda.1se
-```
 
-```{r}
 # Lasso model
+
 # minimum MSE
-min(lasso$cvm)
 
 # lambda for this min MSE
-lasso$lambda.min
-```
 
-```{r}
-# Lasso model
 # 1-SE rule
-lasso$cvm[lasso$lambda == lasso$lambda.1se]
 
 # lambda for this MSE
-lasso$lambda.1se
+
+# No. of coef | 1-SE MSE
 ```
-
-```{r}
-# No. of coef when using min MSE
-lasso$nzero[lasso$lambda == lasso$lambda.min]
-
-# No. of coef when using 1-SE rule
-lasso$nzero[lasso$lambda == lasso$lambda.1se]
-
-```
-
 
 ```{r}
 # Ridge model
-ridge_min <- glmnet(
-  x = X,
-  y = Y,
-  alpha = 0,
-  lambda = ridge$lambda.min
-)
+ridge_min 
 
 # Lasso model
-lasso_min <- glmnet(
-  x = X,
-  y = Y,
-  alpha = 1,
-  lambda = lasso$lambda.min
-)
+lasso_min
+
 
 par(mfrow = c(1, 2))
 # plot ridge model
