--- a/lab/Lab4.Rmd
+++ b/lab/Lab4.Rmd
@@ -12,6 +12,7 @@ library(skimr)
 library(tidymodels)
 library(caret)
 library(corrplot)
+library(boot)
 ```
 
 ## Lab 4: Fire and Tree Mortality
@@ -163,13 +164,76 @@ tidy(logistic_full)
 Now we want to estimate our model's generalizability using resampling.
 
 > Question 9: Use cross validation to assess model accuracy. Use caret::train() to fit four 10-fold cross-validated models (cv_model1, cv_model2, cv_model3, cv_model4) that correspond to each of the four models we've fit so far: three simple logistic regression models corresponding to each of the three key predictors (CVS_percent, DBH_cm, BCHM_m) and a multiple logistic regression model that combines all three predictors.
->
+
+```{r}
+# Define the control parameters for 10-fold cross-validation
+ctrl <- trainControl(method = "cv", number = 10)
+
+# Create a formula for each model
+formula1 <- as.formula("yr1status ~ CVS_percent")
+formula2 <- as.formula("yr1status ~ DBH_cm")
+formula3 <- as.formula("yr1status ~ BCHM_m")
+formula4 <- as.formula("yr1status ~ CVS_percent + DBH_cm + BCHM_m")
+
+# Fit the cross-validated models
+cv_model1 <- train(formula1, data = trees_baked_train, method = "glm", trControl = ctrl, family = "binomial")
+cv_model2 <- train(formula2, data = trees_baked_train, method = "glm", trControl = ctrl, family = "binomial")
+cv_model3 <- train(formula3, data = trees_baked_train, method = "glm", trControl = ctrl, family = "binomial")
+cv_model4 <- train(formula4, data = trees_baked_train, method = "glm", trControl = ctrl, family = "binomial")
+
+# Print the cross-validated results
+print(cv_model1)
+print(cv_model2)
+print(cv_model3)
+print(cv_model4)
+
+
+```
+
+
 > Question 10: Use caret::resamples() to extract then compare the classification accuracy for each model. (Hint: resamples() wont give you what you need unless you convert the outcome variable to factor form). Which model has the highest accuracy?
+
+```{r}
+# Convert the outcome variable to factor
+trees_baked_train$yr1status <- as.factor(trees_baked_train$yr1status)
+
+# Create a list of models
+models_list <- list(cv_model1, cv_model2, cv_model3, cv_model4)
+
+# Use resamples() to compare classification accuracy
+resamp <- resamples(models_list)
+
+# Print the summary of resampled results
+summary(resamp)
+
+```
+
+
 
 Let's move forward with this single most accurate model.
 
 > Question 11: Compute the confusion matrix and overall fraction of correct predictions by the model.
->
+
+```{r}
+# Make predictions on your data using the trained model
+predictions <- predict(cv_model4, newdata = trees_baked_train)
+
+# Create the confusion matrix
+confusion_matrix <- confusionMatrix(predictions, reference = trees_baked_train$yr1status)
+
+# Print the confusion matrix
+print(confusion_matrix)
+
+```
+
+
+```{r}
+# Compute the overall fraction of correct predictions
+correct_predictions <- confusion_matrix$overall["Accuracy"]
+print(paste("Overall Fraction of Correct Predictions:", correct_predictions))
+```
+
+
 > Question 12: Explain what the confusion matrix is telling you about the types of mistakes made by logistic regression.
 >
 > Question 13: What is the overall accuracy of the model? How is this calculated?
