--- a/lab/Lab5.Rmd
+++ b/lab/Lab5.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Lab5"
-author: "Your Name"
+author: "Linus Ghanadan"
 date: "2023-02-07"
 output: html_document
 ---
@@ -29,7 +29,7 @@ Client ID and Client Secret are required to create and access token that is requ
 
 ```{r access_API}
 
-Sys.setenv(SPOTIFY_CLIENT_ID = 'your_client_id_here') Sys.setenv(SPOTIFY_CLIENT_SECRET = 'you_client_secret_here')
+Sys.setenv(SPOTIFY_CLIENT_ID = '78d73a6f06864c0490376e08f8dc5b50') Sys.setenv(SPOTIFY_CLIENT_SECRET = 'e8c15bc9620747b9bcd29c1bea994e4e')
 
 authorization_code <- get_spotify_authorization_code(scope = scopes()[c(1:19)]) #sets an authorization code that you'll need to provide for certain get_ functions via my_tracks <- get_my_saved_tracks(authorization = authorization_code)
 
